# backend-app

./: .gitignore  License.txt  README.md
contract/: Cargo.toml
contract/src/: lib copy.rs  lib.rs
workspace-test/: Cargo.toml
workspace-test/examples/: Cargo.toml
workspace-test/examples/res/: raffland.wasm
workspace-test/examples/src/: raffland.rs  raffland_NFT.rs
